pov-simple-backup (0.12) UNRELEASED; urgency=medium

  * Use /bin/bash instead of /bin/sh (GH: #7).
  * Improve failure handling and reporting (GH: #4).
  * Make pov-simple-backup -S handle back_up_dpkg_selections correctly
    (it was ignoring the size of var-lib-apt-extended_states.gz).

 -- Marius Gedminas <marius@gedmin.as>  Mon, 01 Oct 2018 15:50:01 +0300

pov-simple-backup (0.11) precise; urgency=medium

  * Smarter verbose output when you use a tar option in front of a path,
    e.g. 'back_up_to foo --option'.
  * Documentation warns that tar's --no-recursive must come before the
    directory you don't want to recurse, in new versions of tar.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 18 Aug 2016 10:24:09 +0300

pov-simple-backup (0.10) precise; urgency=medium

  * New option: -g (generate config).

 -- Marius Gedminas <marius@gedmin.as>  Mon, 02 Nov 2015 12:11:18 +0200

pov-simple-backup (0.9) precise; urgency=medium

  * Slightly better error reporting for rsync errors.

 -- Marius Gedminas <marius@gedmin.as>  Mon, 08 Jun 2015 10:32:10 +0300

pov-simple-backup (0.8) precise; urgency=medium

  * back_up_dpkg_selections now also backs up /var/lib/apt/extended_states

 -- Marius Gedminas <marius@gedmin.as>  Fri, 06 Mar 2015 12:00:02 +0200

pov-simple-backup (0.7) precise; urgency=low

  * Make pov-simple-backup -S handle back_up_uncompressed_to correctly.
  * Make pov-simple-backup -S handle $BACKUP_SUFFIX correctly in
    clean_up_old_backups.

 -- Marius Gedminas <marius@gedmin.as>  Mon, 02 Sep 2013 09:15:03 +0300

pov-simple-backup (0.6) precise; urgency=low

  * New commands: back_up_svn, back_up_uncompressed, back_up_uncompressed_to.
  * Make pov-simple-backup -S handle $BACKUP_SUFFIX correctly.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 30 Aug 2013 18:13:08 +0300

pov-simple-backup (0.5) precise; urgency=low

  * Bugfix: make 'rsync_to user@host:dir -i identity_file' work.
  * Document the BACKUP_ROOT variable.
  * New variable: BACKUP_SUFFIX.
